[metadata]
name = pytoexe
author = Wardopdem
author_email = wardopdem@gmail.com
version = attr: wdd.util.VERSION
description = "Creating windows executable  that calling python interpretter from Pyton's script."
long_description = file:README.md
license = BSD 3-Clause License
url = https://github.com/wardopdem/pytoexe
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: Microsoft :: Windows

[options]
package_dir = 
    = src
packages = find:
include_package_data = true
python_requires = >=3.6

[options.packages.find]
where=src

[options.entry_points]
console_scripts = 
    pytoexe = pytoexe.__main__:main
